modified popular lessons rendering and templates

--- a/templates/views/elearning/elearning.jade
+++ b/templates/views/elearning/elearning.jade
@@ -2,26 +2,29 @@ extends ../../layouts/elearning
 
 block css
 
-block search
+mixin navigation(action)
   .container
     .row
       nav.navbar.navbar-default
         .container-fluid
           //- Mobile menu
           .navbar-header
-            button(type="button", data-toggle="collapse", aria-expanded="false", data-target="#publications-filter").navbar-toggle.collapsed
+            button(type="button", data-toggle="collapse", aria-expanded="false", data-target="#search-view-nav").navbar-toggle.collapsed
               span.sr-only Toggle navigation
               span.icon-bar
               span.icon-bar
               span.icon-bar
 
-          #publications-filter.collapse.navbar-collapse
-            ul.nav.navbar-nav
-            form.navbar-form.navbar-right
-              .form-group
-                input.form-control(type='text', placeholder='Search')
-              button.btn.btn-default(type='submit')
-                span.glyphicon.glyphicon-search(aria-hidden="true")
+            
+            .collapse.navbar-collapse(id='search-view-nav')
+              form.navbar-form.navbar-left
+                .form-group
+                  .row
+                    .col-xs-6.col-md-8
+                      input.form-control(type='text', placeholder='Search')
+                    .col-xs-6.col-md-4
+                      button.btn.btn-default(type='submit') Submit
+
                 
 //- mixin reactions(currentLO)
   .row
@@ -40,30 +43,26 @@ block search
 
 
 mixin popular(learningObjects)
-  a(href='/elearning/popular')
-    h2.text-center Popular
-  if learningObjects.length
-    .row.equal-height
+  .row
+    a(href=url+'learning-objects/popular')
+      h2.text-center Popular Lessons
+  .row.equal-height
+    if learningObjects.length
       each learningObject in learningObjects
-        .col-xs-6.col-md-3
+        .col-xs-6.col-md-4
           .thumbnail
             if learningObject.thumbnail.exists
-              img.card-img-top(src=learningObject.thumbnail alt="learningObject.title")
-            else if learningObject.videoId
-              img.card-img-top(src='https://img.youtube.com/vi/'+ learningObject.videoId +'/mqdefault.jpg', height="150px")
-            else
-              img.card-img-top(src="/images/image-not-available-th.png" alt=learningObject.title, height="150px")
+              img.card-img-top(src=learningObject._.thumbnail.fit(200, 150), alt=learningObject.title, height='150px', width='200px').img-responsive
+            else 
+              img.card-img-top(src="http://placehold.it/200x150", alt='No Available Image' height='150px', width='200px').img-responsive
             .caption
-              .row
-                h3= learningObject.title.substring(0, 50)
-              .row
-                p= learningObject.content.brief.substring(0, 100)
-                //- +reactions(learningObject)
-              hr
-              .row
+              h3= learningObject.title.substring(0, 50)
+              p= learningObject.content.brief.substring(0, 100)
+              br
+              p
                 a.btn.btn-info.btn-block(href=learningObject.url) Learn more
-  else
-    h3.text-muted There are no courses yet.
+    else
+      h3.text-muted There are no popular lessons this #{duration} yet.
 
 mixin allCourses(courses)
   a(href='/elearning/courses')
@@ -114,11 +113,11 @@ mixin recommended(learningObjects)
 
 
 block content
-  block search
+  +navigation()
   .container
     .panel.panel-default
       .panel-body
-        +popular(popularLO)
+        +popular(paginatePopularLO.results)
       .panel-footer
         a(href='/elearning/learning-objects?').btn.btn-link View All Lessons
   .container
