--- a/templates/views/elearning/popular.jade
+++ b/templates/views/elearning/popular.jade
@@ -1,45 +1,113 @@
 extends ../../layouts/elearning
 
+block js
+  |  $('.dropdown-toggle').dropdown()S
+
+mixin navigation(action)
+  .container
+    .row
+      nav.navbar.navbar-default
+        .container-fluid
+          //- Mobile menu
+          .navbar-header
+            button(type="button", data-toggle="collapse", aria-expanded="false", data-target="#search-view-nav").navbar-toggle.collapsed
+              span.sr-only Toggle navigation
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+
+            
+            .collapse.navbar-collapse(id='search-view-nav')
+              form.navbar-form.navbar-left
+                .form-group
+                  .row
+                    .col-xs-6.col-md-8
+                      input.form-control(type='text', placeholder='Search')
+                    .col-xs-6.col-md-4
+                      button.btn.btn-default(type='submit') Submit
+              //- ul.nav.navbar-nav.navbar-right
+                +selectView()
+
+mixin selectView(action)
+  ul.nav.navbar-nav.navbar-right
+    li
+      a(href=url+'page='+page+'&view=grid'+'&duration='+duration)
+        span(aria-hidden="true").glyphicon.glyphicon-th
+    li
+      a(href=url+'page='+page+'&view=list'+'&duration='+duration)
+        span(aria-hidden="true").glyphicon.glyphicon-th-list
+
+
+mixin selectDuration(action)
+  .dropdown
+    button.btn.btn-default.dropdown-toggle(type='button', id='duration', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true') Popular this &emsp;
+      span.caret
+    ul.dropdown-menu(aria-labelledby='duration')
+      li
+        a(href=url+'page='+page+'&view='+viewStyle+'&duration=day') day
+      li
+        a(href=url+'page='+page+'&view='+viewStyle+'&duration=week') week
+      li 
+        a(href=url+'page='+page+'&view='+viewStyle+'&duration=month') month
+
+mixin selectPage(pagination)
+  
+  ul.pagination.pull-right
+    li
+      if pagination.previous != false
+        a(href=url+'page='+pagination.previous+'&view='+viewStyle+'&duration='+duration, aria-label="Previous")
+          span(aria-hidden="true") &laquo
+    each page in pagination.pages
+      if page == pagination.currentPage
+        li.active
+          a(href=url+'page='+page+'&view='+viewStyle+'&duration='+duration) #{page}
+      else
+        li
+          a(href=url+'view=grid&page='+page)= page
+    li
+      if pagination.next != false
+        a(href=url+'page='+pagination.next+'&view='+viewStyle+'&duration='+duration aria-label="Next")
+          span(aria-hidden="true") &raquo
+
+
 mixin popularLO-grid(learningObjects)
-  h2.text-center Popular Lessons
-  if learningObjects.length
-    .row.equal-height
+  .row
+    .col-md-8.col-xs-7
+      h3.text-left Popular Lessons this #{duration} (#{paginatePopularLO.total})
+    .col-md-2.col-xs-3
+      +selectDuration()
+    .col-md-2.col-xs-2.pull-right
+      +selectView()
+  .row.equal-height
+    if learningObjects.length
       each learningObject in learningObjects
-        .col-xs-6.col-md-3
+        .col-xs-6.col-md-4
           .thumbnail
-            if learningObject._.thumbnail.exists
-              img.card-img-top(src=learningObject._.thumbnail.limit(200, 150), alt=learningObject.title, height='150px', width='200px')
-            else
-              img.card-img-top(src="http://placehold.it/200x150", height='150px', width='200px')
+            if learningObject.thumbnail.exists
+              img.card-img-top(src=learningObject._.thumbnail.fit(200, 150), alt=learningObject.title, height='150px', width='200px').img-responsive
+            else 
+              img.card-img-top(src="http://placehold.it/200x150", alt='No Available Image' height='150px', width='200px').img-responsive
             .caption
               h3= learningObject.title.substring(0, 50)
               p= learningObject.content.brief.substring(0, 100)
               br
               p
                 a.btn.btn-info.btn-block(href=learningObject.url) Learn more
-  else
-    h3.text-muted There are no popular lessons yet.
-  //- ul.pagination.pull-right
-    li
-      a(href="/elearning/learningObjects?view=grid&page="+learningObjects.previous aria-label="Previous")
-        span(aria-hidden="true") &laquo
-    each page in learningObjects.pages
-      if page==learningObjects.currentPage
-        li.active
-          a(href="/elearning/learningObjects?view=grid&page="+page)= page
-      else
-        li
-          a(href="/elearning/learningObjects?view=grid&page="+page)= page
+    else
+      h3.text-muted There are no popular lessons this #{duration} yet.
+    
 
-    li
-      a(href="/elearning/learningObjects?view=grid&page="+learningObjects.next aria-label="Next")
-        span(aria-hidden="true") &raquo
-
-
+  
 mixin popularLO-list(learningObjects)
-  h2.text-center Popular Lessons
-  if learningObjects.length
-    .row
+  .row
+    .col-md-8.col-xs-7
+      h3.text-left Popular Lessons this #{duration} (#{paginatePopularLO.total})
+    .col-md-2.col-xs-3
+      +selectDuration()
+    .col-md-2.col-xs-2.pull-right
+      +selectView()
+  .row
+    if learningObjects.length
       .col-md-12
         .panel
           table.table.table-hover
@@ -49,20 +117,22 @@ mixin popularLO-list(learningObjects)
                 tr.media
                   td
                     .media-left
-                      if learningObject._.thumbnail.exists
+                      if learningObject.thumbnail.exists
                         a(href=learningObject.url)
                           img(src=learningObject._.thumbnail.limit(200,150), alt=learningObject.title, height='150px', width='200px').img-rounded.media-object
                       else
                         a(href=learningObject.url)
-                          img(src="http://placehold.it/200x150", height="150px", width="200px").img-rounded.media-object
+                          img(src="http://placehold.it/200x150", height='150px', width='200px').img-rounded.media-object
                     .media-body
                       a(href=learningObject.url)
-                        h4.media-heading= learningObject.title
+                        h3.media-heading= learningObject.title
                         .row
                           span= learningObject.content.brief
                         hr
                         .row
-                          //- p.text-right #{learningObject.loviews.length} Views
+                          .col-md-2
+                            p #{learningObject.viewCount} Views
+
                           .col-md-2
                             p #{learningObject.likes.length} &nbsp;
                               i.fa.fa-thumbs-o-up.fa-lg(aria-hidden="true")
@@ -73,60 +143,17 @@ mixin popularLO-list(learningObjects)
                             p #{learningObject.happy.length} &nbsp;
                               i.fa.fa-frown-o.fa-lg(aria-hidden="true")
 
-  else
-    h3.text-muted There are no popular lessons yet.
-  //- ul.pagination.pull-right
-    li
-      a(href="/elearning/learningObjects?view=list&page="+learningObjects.previous aria-label="Previous")
-        span(aria-hidden="true") &laquo
-    each page in learningObjects.pages
-      if page==learningObjects.currentPage
-        li.active
-          a(href="/elearning/learningObjects?view=list&page="+page)= page
-      else
-        li
-          a(href="/elearning/learningObjects?view=list&page="+page)= page
-
-    li
-      a(href="/elearning/learningObjects?view=list&page="+learningObjects.next aria-label="Next")
-        span(aria-hidden="true") &raquo
-
-
-
-mixin navigation(learningObjects)
-  .container
-    .row
-      nav.navbar.navbar-default
-        .container-fluid
-          //- Mobile menu
-          .navbar-header
-            button(type="button", data-toggle="collapse", aria-expanded="false", data-target="#publications-filter").navbar-toggle.collapsed
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-
-          #publications-filter.collapse.navbar-collapse
-            ul.nav.navbar-nav
-            form.navbar-form.navbar-left
-              .form-group
-                input.form-control(type='text', placeholder='Search')
-              button.btn.btn-default(type='submit') Submit
-            //- ul.nav.navbar-nav.navbar-right
-              li
-                a(href="/elearning/learningObjects?view=grid&page="+learningObjects.currentPage)
-                  span(aria-hidden="true").glyphicon.glyphicon-th
-              li
-                a(href="/elearning/learningObjects?view=list&page="+learningObjects.currentPage)
-                  span(aria-hidden="true").glyphicon.glyphicon-th-list
+    else
+      h3.text-muted There are no popular lessons this #{duration} yet.
 
 block content
-  +navigation(popularLO)
+  +navigation()
   .container
     .panel.panel-default
       .panel-body
         if viewStyle == 'grid'
-          +popularLO-grid(popularLO)
+          +popularLO-grid(paginatePopularLO.results)
         else
-          +popularLO-list(popularLO)
-
+          +popularLO-list(paginatePopularLO.results)
+        +selectPage(paginatePopularLO)
+    
