Added the graph for comparison of Learning Object views

--- a/templates/views/elearning/analyticsRecommended.jade
+++ b/templates/views/elearning/analyticsRecommended.jade
@@ -27,7 +27,9 @@ block content
                 li.active
                   a(href='/elearning/analytics/recommendedViews') Analytics of Recommended Learning Objects
       .col-md-9.col-sm-4.dashboard
-        h4 Total Number of Views of Recommended Learning Objects
-        .col-md-8.col-md-offset-2
+        h4 Analytics of Recommended Learning Objects
+        .col-md-6.col-sm-4
           div(id="recommendedViewsGraph")
+        .col-md-6.col-sm-4
+          div(id="ratioViewsGraph")
   script(src='/js/elearning-graphs/recommendedViews.js')
