started on rendering learning objects based on tags

--- a/templates/views/elearning/learningObject.jade
+++ b/templates/views/elearning/learningObject.jade
@@ -112,12 +112,15 @@ mixin tags(tags)
   .row
     if tags.length
       each tag in tags
-        if tag.category == 'isp'
-          a(href='/elearning/learning-objects?isp='+tag.key) #[span.label.label-primary #{tag.name}] &nbsp;
-        else if tag.category == 'sector'
-          a(href='/elearning/learning-objects?sector='+tag.key) #[span.label.label-success #{tag.name}] &nbsp;
-        else if tag.category == 'industry'
-          a(href='/elearning/learning-objects?industry='+tag.key) #[span.label.label-info #{tag.name}] &nbsp;
+        if tag != null
+          if tag.category == 'isp'
+            a(href='/elearning/learning-objects?isp='+tag.key) #[span.label.label-primary #{tag.name}] &nbsp;
+          else if tag.category == 'sector'
+            a(href='/elearning/learning-objects?sector='+tag.key) #[span.label.label-success #{tag.name}] &nbsp;
+          else if tag.category == 'industry'
+            a(href='/elearning/learning-objects?industry='+tag.key) #[span.label.label-info #{tag.name}] &nbsp;
+          else if tag.category == 'null'
+            a(href='/elearning/learning-objects?specific='+tag.key) #[span.label.label-info #{tag.name}] &nbsp;
 
 mixin learningObject(currentLO)
   .row
