Added initial view of visit demographics and statistics

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -28,6 +28,7 @@
 @import "community/community.less";
 @import "community/public-news.less";
 @import "community/public-content.less";
+@import "community/public-analytics.less";
 @import "eresources/eresources.less";
 @import "eresources/publications.less";
 @import "elearning/elearning.less";
