--- a/templates/views/community/includes/public-content.jade
+++ b/templates/views/community/includes/public-content.jade
@@ -178,5 +178,5 @@
         a(href="images/exhibit/knifefish.jpg").col-md-2.col-sm-4.col-xs-6
           .img-wrapper
             img(src='images/exhibit/knifefish.jpg').photo.img-responsive
-      
-  br
+  
+  include public-analytics.jade
